--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 Графическая библиотека OpenGL.doc
 Лекция на лаб_1_GL.ppt
-lr1/build-lr1-Desktop_Qt_5_15_2_MSVC2015_64bit-Debug
+**/build-*
 **/~$*
 **/*.pro.user
